--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,7 @@ Metrics/BlockLength:
   Exclude:
     - '*.gemspec'
     - 'spec/**/*'
+
+Lint/AmbiguousBlockAssociation:
+  Exclude:
+    - spec/**/*
